# Ara1

./: .gitmodules  CMakeLists.txt  arquitectura.dia  capibara.cmake  proyecto.json
api/: .gitignore
api/config/: requirements.pip
api/docs/: output.dot
api/src/: manage.py
api/src/api_trading/: .env  .env-sample  pagination.py  serializers.py  settings.py  test.py  urls.py  wsgi.py
api/src/configuration/: filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
api/src/configuration/migrations/: 0001_initial.py  0002_botconfig_db_verbosity.py  0003_auto_20180921_1504.py  0004_auto_20181003_1815.py  0008_coin.py  (+3 more)
api/src/transactions/: filters.py  models.py  serializers.py  tests.py  urls.py  views.py
api/src/users/: serializers.py  tests.py  urls.py  views.py
bot/: .gitignore  CMakeLists.txt  capibara.cmake  proyecto.json
bot/include/Poco/: AbstractEvent.h  Alignment.h  Any.h  Config.h  FIFOBuffer.h  Foundation.h  NumberFormatter.h  NumericString.h  String.h
bot/include/Poco/Crypto/: EVPPKey.h  X509Certificate.h
bot/include/Poco/Dynamic/: Struct.h  Var.h  VarHolder.h
bot/include/Poco/JSON/: Array.h  Object.h
bot/include/Poco/Net/: Net.h  Socket.h  SocketAddress.h  SocketAddressImpl.h  SocketDefs.h
bot/include/nlohmann/: json.hpp
bot/src/main/: main.cpp
bot/src/okex/: api.cpp  api.hpp  coins.hpp  symbols.hpp  ticker.cpp
bot/src/trading/: Edge_Data.cpp  Edge_Data.hpp  Graph.cpp  Graph.hpp  GraphIterator.cpp  GraphIterator.hpp  GraphNode.cpp  GraphNode.hpp  IndexReference.cpp  IndexReference.hpp  QThreadLambda.cpp  QThreadLambda.hpp  coins.cpp  coins.hpp  path_node.cpp  path_node.hpp  ticker.cpp  ticker.hpp
bot/src/trading/gui/: GraphDrawer.cpp  GraphDrawer.hpp
bot/src/trading/rest/: api.cpp  api.hpp  bot_config.cpp  bot_config.hpp  parity.cpp  parity.hpp  result.cpp  result.hpp  transaction.cpp  transaction.hpp  transaction_detail.cpp  transaction_detail.hpp
bot/src/utils/: utils.cpp  utils.hpp
include/nlohmann/: json.hpp
src/main/: main.cpp
src/okex/: api.cpp  api.hpp  coins.cpp  coins.hpp  ticker.hpp
(+6 files in other folders)
